# paris-air-quality-prediction

./: .gitignore  README.md  final_pred_lags_2.py  final_pred_optuna.py  final_pred_preprocess.py  plot_deltas.py  premier_essai.ipynb  pyproject.toml  requirements.txt
constants/: constants.py
models/: interpolation_honest.py  xgboost.py
notebooks/: eda.ipynb  feature_engineering.py  multi_output_regressor_xgboost.ipynb  statistical_models.ipynb
src/: evaluation.py  linear_interpolation.py  preprocessing.py
src/utils/: additional_data.py  feature_engineering.py  fill_submissions.py  load_data.py  plot_predictions.py
