[project]
name = "paris-air-quality-prediction"
version = "0.1.0"
description = "X-HEC MScT Data Science for Business final project for the Introduction to Time Series course"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "qolmat>=0.1.10",
]

[dependency-groups]
dev = [
    "anywidget>=0.9.18",
    "ipykernel>=7.0.0",
    "jupyterlab>=4.4.9",
    "pip>=25.2",
]

# URLs for the project
[project.urls]
repository = "https://github.com/auggy-ntn/paris-air-quality-prediction"

# Build system requirements
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "models*", "constants*"]


###### Configuration for Ruff linter and formatter ######
[tool.ruff]
extend-include = ["*.py", "*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (errors)
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
